--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -19,6 +19,8 @@
     {% block body %}
     {% endblock %}
 
+    {% include 'main/partials/footer.html' %}
+
     {% include 'main/partials/scripts.html' %}
 
     {% block scripts %}
