--- a/static/css/components/_navbar.scss
+++ b/static/css/components/_navbar.scss
@@ -1,3 +1,28 @@
-.navb {
-	color: blue;
+nav.navbar {
+	background-color: #b52f2f !important;
+	font-size: 14px;
+	padding-top: 10px !important;
+	padding-bottom: 10px !important;
+
+	a.nav-link,
+	a.navbar-brand {
+		color: white;
+	}
+
+	a.navbar-brand {
+		font-weight: bold;
+	}
+
+	.nav-item {
+		margin: 0px 5px;
+	}
+
+	.post-btn {
+		padding: 10px 13px !important;
+		text-transform: uppercase;
+		background-color: #f0d455;
+		border-radius: 6px;
+		font-size: 12px;
+		color: black !important;
+	}
 }
