--- a/account/templates/account/signup.html
+++ b/account/templates/account/signup.html
@@ -9,7 +9,7 @@
     <div class="jumbotron">
         <div class="row">
          
-            <div class="col-md-12 offset-md-0 py-3" >
+            <div class="col-md-6 mx-auto offset-md-0 py-3" >
                 <div class="card  " style="-webkit-box-shadow: 11px 15px 14px 8px rgba(0,0,0,0.75);
 -moz-box-shadow: 11px 15px 14px 8px rgba(0,0,0,0.75);
 box-shadow: 11px 15px 14px 8px rgba(0,0,0,0.75);">
@@ -22,7 +22,11 @@ box-shadow: 11px 15px 14px 8px rgba(0,0,0,0.75);">
             
                                 <div class="d-flex pr-3 mb-3">
                                     <i  class="far fa-user-circle fa-2x pr-3"></i>
-                                   <input type="text" class="form-control" placeholder="Phone Number" id="name" name="number">   
+                                   <input type="email" class="form-control" placeholder="Email" id="name" name="email">   
+                                </div>
+                                <div class="d-flex pr-3 mb-3">
+                                    <i  class="far fa-user-circle fa-2x pr-3"></i>
+                                   <input type="text" class="form-control" placeholder="User name" id="name" name="user_name">   
                                 </div>
 
                             
@@ -31,21 +35,24 @@ box-shadow: 11px 15px 14px 8px rgba(0,0,0,0.75);">
                                     <i  class="fas fa-user-circle fa-2x pr-3"></i>
                                     <input type="text" class="form-control" placeholder="First name" id="name" name="f-name">   
                                 </div>
-
-                            
-                            <div class="d-flex pr-3 mb-3">
+                                <div class="d-flex pr-3 mb-3">
                                     <i  class="fas fa-user-circle fa-2x pr-3"></i>
                                     <input type="text" class="form-control" placeholder="Last name" id="name" name="l-name">   
+                                </div>
+
+                            <div class="d-flex pr-3 mb-3">
+                                    <i  class="fas fa-user-circle fa-2x pr-3"></i>
+                                    <input type="password" class="form-control" placeholder="password" id="name" name="password1">
                             </div>
                             <div class="d-flex pr-3 mb-3">
                                     <i  class="fas fa-user-circle fa-2x pr-3"></i>
-                                    <input type="text" class="form-control" placeholder="password" id="name" name="password">   
+                                    <input type="password" class="form-control" placeholder="confirm-password" id="name" name="password2">
                             </div>
 
                             <div class="d-flex justify-content-center px-4 mb-5">
 
                                     
-                               <input class="btn btn-danger btn-sm" type="submit" > 
+                               <input class="btn btn-danger btn-sm" type="submit"> 
                                  
                             </div> 
 
