--- a/main/templates/main/partials/navbar.html
+++ b/main/templates/main/partials/navbar.html
@@ -19,69 +19,31 @@
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
                     <a class="nav-link" href="#"
-                    >All Ads <span class="sr-only">(current)</span></a
-                    >
+                    >All Ads <span class="sr-only">(current)</span></a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#"><i class="far fa-bell"></i></a>
-                </li>
-                <li class="nav-item">
-                    
-                    <a type="button" class="btn text-white" data-toggle="modal"  href="#" data-target="#exampleModal" >Login
-                    </a>
 
-                    <!-- pop up login  -->
-                    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" data-keyboard="false" data-backdrop="static"
-                         aria-hidden="true">
-                        <div class="modal-dialog modal-sm modal-dialog-centered">
-                            <div class="modal-content">
-                                <div class="modal-header">
-                                    <h5 class="modal-title" id="exampleModalLabel">Login</h5>
-                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                        <span aria-hidden="true">&times;</span>
-                                    </button>
-                                </div>
-                                <div class="modal-body">
-                                    <form action=" {% url 'login-page' %} " method="POST">
-
-                                        {% csrf_token %}
-                                        <div class="form-group">
-                                            <input type="text" class="form-control col-form-label-lg"
-                                                   id="exampleInputPassword1" name="p_number"
-                                                   placeholder="Phone Number"/>
-                                        </div>
-                                        <div class="form-group">
-                                            <input type="text" class="form-control col-form-label-lg"
-                                                   id="exampleInputPassword1" name="password"
-                                                   placeholder="Password"/>
-                                        </div>
-
-                                       
-                                        <div class="form-group align-items-center">
-                                            <input type="submit" class="btn btn-danger btn-sm btn-block">
-
-                                        </div>
-                                        <div class="form-group d-flex justify-content-center ">
-
-                                            <small>Don't have an account? <a class="text-danger" href="{% url 'signup-page' %}">Sign
-                                                up</a></small>
-                                        </div>
-                                        <div class="from-group d-flex justify-content-center">
-
-                                            <small class="text-danger"> <a href="">Forget Password </a> </small>
-                                        </div>
-                                    </form>
-                                </div>
-
-                            </div>
-                        </div>
-                    </div>
+                {% if user.is_authenticated %}
+                        <li class="nav-item">
+                        <a class="nav-link" href="#"> hello, {{user.first_name}} </a> 
+                        </li>
 
 
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link post-btn" href="{% url 'add-post' %}">Post Your Ad</a>
-                </li>
+                        <li class="nav-item">
+                        <a class="nav-link" href="{% url 'logout' %}">Logout</a></li>
+
+
+                {% else %}
+
+                        <li class="nav-item">
+                            <a class="nav-link" href="#"><i class="far fa-bell"></i></a>
+                        </li>
+                        <li class="nav-item"> <a class="nav-link" href="{% url 'login-page' %}">Login</a> </li>
+                        <li class="nav-item">
+                            <a class="nav-link post-btn" href="{% url 'add-post' %}">Post Your Ad</a>
+                        </li>
+                {% endif %}
+
+              
             </ul>
         </div>
     </div>
