--- a/static/css/components/_navbar.scss
+++ b/static/css/components/_navbar.scss
@@ -1,5 +1,5 @@
 nav.navbar {
-	background-color: #b52f2f !important;
+	background-color: #00b894 !important;
 	font-size: 14px;
 	padding-top: 10px !important;
 	padding-bottom: 10px !important;
