--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -31,7 +31,7 @@ a:hover {
 }
 
 nav.navbar {
-  background-color: #b52f2f !important;
+  background-color: #00b894 !important;
   font-size: 14px;
   padding-top: 10px !important;
   padding-bottom: 10px !important;
